rimozione di classe deprecata e import inutilizzati